# vulkyrie

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  cabal.project  vulkan-engine.cabal  vulkan-triangles.cabal  vulkyrie.cabal
app/: Main.hs
shaders/: Makefile  color_rect.vert  pass_color.frag  single_sampler_discard_alpha.frag  single_texture.vert  sprites.vert  triangle.frag  triangle.vert
src/: Lib.hs
src/Examples/: FPS.hs  Flat.hs  TransformationObject.hs  Vertex.hs
src/Examples/Flat/: Game.hs
src/Lib/: GLFW.hs  MetaResource.hs  Program.hs  Resource.hs  Tests.hs  Utils.hs
src/Lib/Engine/: Config.hs  Draw.hs  Main.hs  Simple2D.hs  Simple3D.hs
src/Lib/MonadIO/: Chan.hs  IORef.hs  MVar.hs  Thread.hs
src/Lib/Program/: Foreign.hs
src/Lib/Vulkan/: Buffer.hs  Command.hs  Descriptor.hs  Device.hs  Drawing.hs  Engine.hs  Framebuffer.hs  Image.hs  Instance.hs  Memory.hs  Pipeline.hs  PipelineLayout.hs  Presentation.hs  Queue.hs  RenderPass.hs  Shader.hs  Sync.hs  TransformationObject.hs  UniformBufferObject.hs  Vertex.hs  VertexBuffer.hs
src/Lib/Vulkan/Default/: Pipeline.hs  RenderPass.hs
src/Lib/Vulkan/Engine/: Simple3D.hs
src/Vulkyrie/: BuildFlags.hs  Concurrent.hs  GLFW.hs  Program.hs  Resource.hs  Tests.hs  Utils.hs
src/Vulkyrie/Engine/: Config.hs  Draw.hs  Main.hs  Pipeline.hs  Simple2D.hs  Simple3D.hs
src/Vulkyrie/Engine/Pipeline/: ColorRect.hs  Sprite.hs
src/Vulkyrie/Examples/: FPS.hs  Flat.hs  TransformationObject.hs  Vertex.hs
src/Vulkyrie/Examples/Flat/: Game.hs
src/Vulkyrie/MonadIO/: Chan.hs  IORef.hs  MVar.hs  Thread.hs
src/Vulkyrie/Program/: Foreign.hs
src/Vulkyrie/Vulkan/: Buffer.hs  Command.hs  Descriptor.hs  Device.hs  Engine.hs  Framebuffer.hs  Image.hs  Instance.hs  Memory.hs  PipelineLayout.hs  Presentation.hs  PushConstant.hs  Queue.hs  Shader.hs  Sync.hs  UniformBufferObject.hs  VertexBuffer.hs
src/Vulkyrie/Vulkan/Default/: Pipeline.hs  RenderPass.hs
src/Vulkyrie/Vulkan/Shader/: TH.hs
