name:                vulkan-engine
version:             0.1.0.0
synopsis:            Haskell-Vulkan experiment, not yet an engine
description:         ...
homepage:            https://github.com/cjay/vulkan-engine
license:             BSD3
license-file:        LICENSE
author:              Johannes Krause
maintainer:          cjay@brainuse.de
copyright:           Copyright: (c) 2018-2020 Johannes Krause, Artem Chirkin
category:            vulkan, bsd3, graphics, library, opengl
build-type:          Simple
cabal-version:       >=1.22
extra-source-files:
    shaders/triangle.frag
    shaders/triangle.vert

flag dev
    description:
        Turn on development settings, such as Vulkan validation layers.
    default: True

library
    hs-source-dirs:     src
    exposed-modules:    Examples.FPS
                        Examples.Flat
                        Examples.Flat.Game
                        Examples.TransformationObject
                        Examples.Vertex
                        Lib.Engine.Draw
                        Lib.Engine.Main
                        Lib.Engine.Simple3D
                        Lib.Engine.Simple2D
                        Lib.Engine.Config
                        Lib.GLFW
                        Lib.MonadIO.Chan
                        Lib.MonadIO.IORef
                        Lib.MonadIO.MVar
                        Lib.MonadIO.Thread
                        Lib.Program
                        Lib.Program.Foreign
                        Lib.Resource
                        -- Lib.Tests
                        Lib.Utils
                        Lib.Vulkan.Buffer
                        Lib.Vulkan.Command
                        Lib.Vulkan.Descriptor
                        Lib.Vulkan.Device
                        Lib.Vulkan.Engine
                        Lib.Vulkan.Framebuffer
                        Lib.Vulkan.Image
                        Lib.Vulkan.Instance
                        Lib.Vulkan.Memory
                        Lib.Vulkan.Queue
                        Lib.Vulkan.Pipeline
                        Lib.Vulkan.PipelineLayout
                        Lib.Vulkan.Presentation
                        Lib.Vulkan.RenderPass
                        Lib.Vulkan.Shader
                        Lib.Vulkan.Shader.TH
                        Lib.Vulkan.Sync
                        Lib.Vulkan.UniformBufferObject
                        Lib.Vulkan.VertexBuffer
    build-depends:      apecs
                      , async
                      , base >= 4.9
                      , concurrent-extra
                      , containers
                      , directory
                      , dimensions
                      , dlist
                      , dynamic-mvector
                      , easytensor
                      , easytensor-vulkan
                      , filepath
                      , GLFW-b >= 3.3.0.0
                      , JuicyPixels
                      , monad-logger
                      , mtl
                      , primitive
                      , process
                      , template-haskell
                      , time
                      , transformers
                      , vector
                      , vulkan-api >= 1.1.4.0
                      , wavefront
                      -- , monadIO -- if needed, provides STM.MonadIO and StdInOut
    default-language:    Haskell2010
    default-extensions:  DataKinds
                       , LambdaCase
                       , NamedFieldPuns
                       , RecordWildCards
                       , ScopedTypeVariables
                       , TypeApplications
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2

executable vulkan-experiment
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -threaded -with-rtsopts=-N
    build-depends:       base
                       , vulkan-engine
    default-language:    Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2



source-repository head
    type:     git
    location: https://github.com/cjay/vulkan-engine
