name:                vulkyrie
version:             0.1.0.0
synopsis:            Vulkan based Graphics Engine
description:         A graphics engine based on Vulkan.
homepage:            https://github.com/cjay/vulkyrie
license:             BSD3
license-file:        LICENSE
author:              Johannes Krause
maintainer:          cjay@brainuse.de
copyright:           Copyright: (c) 2018-2020 Johannes Krause, Artem Chirkin
category:            vulkan, bsd3, graphics, game engine, library
build-type:          Simple
cabal-version:       >=1.22
extra-source-files:
    shaders/triangle.frag
    shaders/triangle.vert

flag dev
    description:
        Turn on development settings, such as Vulkan validation layers.
    default: True

library
    hs-source-dirs:     src
    exposed-modules:    Vulkyrie.Examples.FPS
                        Vulkyrie.Examples.Flat
                        Vulkyrie.Examples.Flat.Game
                        Vulkyrie.Examples.TransformationObject
                        Vulkyrie.Examples.Vertex
                        Vulkyrie.Engine.Draw
                        Vulkyrie.Engine.Main
                        Vulkyrie.Engine.Simple3D
                        Vulkyrie.Engine.Simple2D
                        Vulkyrie.Engine.Config
                        Vulkyrie.GLFW
                        Vulkyrie.MonadIO.Chan
                        Vulkyrie.MonadIO.IORef
                        Vulkyrie.MonadIO.MVar
                        Vulkyrie.MonadIO.Thread
                        Vulkyrie.Program
                        Vulkyrie.Program.Foreign
                        Vulkyrie.Resource
                        -- Vulkyrie.Tests
                        Vulkyrie.Utils
                        Vulkyrie.Vulkan.Default.Pipeline
                        Vulkyrie.Vulkan.Default.RenderPass
                        Vulkyrie.Vulkan.Buffer
                        Vulkyrie.Vulkan.Command
                        Vulkyrie.Vulkan.Descriptor
                        Vulkyrie.Vulkan.Device
                        Vulkyrie.Vulkan.Engine
                        Vulkyrie.Vulkan.Framebuffer
                        Vulkyrie.Vulkan.Image
                        Vulkyrie.Vulkan.Instance
                        Vulkyrie.Vulkan.Memory
                        Vulkyrie.Vulkan.Queue
                        Vulkyrie.Vulkan.PipelineLayout
                        Vulkyrie.Vulkan.Presentation
                        Vulkyrie.Vulkan.Shader
                        Vulkyrie.Vulkan.Shader.TH
                        Vulkyrie.Vulkan.Sync
                        Vulkyrie.Vulkan.UniformBufferObject
                        Vulkyrie.Vulkan.VertexBuffer
    build-depends:      apecs
                      , async
                      , base >= 4.9
                      , concurrent-extra
                      , containers
                      , directory
                      , dimensions
                      , dlist
                      , dynamic-mvector
                      , easytensor
                      , easytensor-vulkan
                      , filepath
                      , GLFW-b >= 3.3.0.0
                      , JuicyPixels
                      , monad-logger
                      , mtl
                      , primitive
                      , process
                      , template-haskell
                      , time
                      , transformers
                      , vector
                      , vulkan-api >= 1.1.4.0
                      , wavefront
                      -- , monadIO -- if needed, provides STM.MonadIO and StdInOut
    default-language:    Haskell2010
    default-extensions:  DataKinds
                       , LambdaCase
                       , NamedFieldPuns
                       , RecordWildCards
                       , ScopedTypeVariables
                       , TypeApplications
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2

executable vulkan-experiment
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -threaded -with-rtsopts=-N
    build-depends:       base
                       , vulkyrie
    default-language:    Haskell2010
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2



source-repository head
    type:     git
    location: https://github.com/cjay/vulkyrie.git
