cabal-version:       2.2
name:                vulkyrie
version:             0.1.0.0
synopsis:            Vulkan based Graphics Engine
description:         A graphics engine based on Vulkan.
homepage:            https://github.com/cjay/vulkyrie
license:             BSD-3-Clause
license-file:        LICENSE
author:              Johannes Krause
maintainer:          cjay@brainuse.de
copyright:           Copyright (C) 2019-2021 Johannes Krause,
                     Copyright (C) 2018-2019 Artem Chirkin
category:            vulkan, bsd3, graphics, game engine, library
build-type:          Simple
tested-with:         GHC == 8.10.4

flag dev
    description:
        Turn on development settings, such as Vulkan validation layers.
    default: True

common basic
    default-language:    Haskell2010
    default-extensions:  DataKinds
                       , LambdaCase
                       , NamedFieldPuns
                       , OverloadedStrings
                       , RecordWildCards
                       , ScopedTypeVariables
                       , TypeApplications
    ghc-options: -Wall -fobject-code
    if flag(dev)
        cpp-options: -DDEVELOPMENT
        -- asserts are ignored when optimization is turned on
        ghc-options: -fno-ignore-asserts
    else
        ghc-options: -O2
    build-depends: base >= 4.9     && < 4.15

library
    import:             basic
    hs-source-dirs:     src
    exposed-modules:    Vulkyrie.BuildFlags
                        Vulkyrie.Concurrent
                        Vulkyrie.Examples.FPS
                        Vulkyrie.Examples.Flat
                        Vulkyrie.Examples.Flat.Game
                        Vulkyrie.Examples.TransformationObject
                        Vulkyrie.Examples.Vertex
                        Vulkyrie.Engine.Draw
                        Vulkyrie.Engine.Main
                        Vulkyrie.Engine.Simple3D
                        Vulkyrie.Engine.Simple2D
                        Vulkyrie.Engine.Config
                        Vulkyrie.GLFW
                        Vulkyrie.Program
                        Vulkyrie.Program.Foreign
                        Vulkyrie.Resource
                        Vulkyrie.Tests
                        Vulkyrie.Utils
                        Vulkyrie.Vulkan.Default.Pipeline
                        Vulkyrie.Vulkan.Default.RenderPass
                        Vulkyrie.Vulkan.Buffer
                        Vulkyrie.Vulkan.Command
                        Vulkyrie.Vulkan.Descriptor
                        Vulkyrie.Vulkan.Device
                        Vulkyrie.Vulkan.Engine
                        Vulkyrie.Vulkan.Framebuffer
                        Vulkyrie.Vulkan.Image
                        Vulkyrie.Vulkan.Instance
                        Vulkyrie.Vulkan.Memory
                        Vulkyrie.Vulkan.Queue
                        Vulkyrie.Vulkan.PipelineLayout
                        Vulkyrie.Vulkan.Presentation
                        Vulkyrie.Vulkan.Shader
                        Vulkyrie.Vulkan.Sync
                        Vulkyrie.Vulkan.UniformBufferObject
                        Vulkyrie.Vulkan.VertexBuffer
    build-depends:      apecs
                      , concurrent-extra
                      , containers
                      , dimensions
                      , dlist
                      , easytensor >= 2.1.1.1
                      , easytensor-vulkan >= 2.0.2.1
                      , GLFW-b >= 3.3.0.0
                      , JuicyPixels
                      , monad-logger
                      , mtl
                      , primitive
                      , safe
                      , template-haskell
                      , text
                      , transformers
                      , unliftio
                      , unliftio-core
                      , vector
                      , vulkan-api >= 1.4.0.0
                      , wavefront

executable vulkan-experiment
    import:              basic
    hs-source-dirs:      app
    main-is:             Main.hs
    build-depends:       vulkyrie
    ghc-options: -threaded -with-rtsopts=-N

source-repository head
    type:     git
    location: https://github.com/cjay/vulkyrie.git
